2006-04-04  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Post release version bump

=== 2.9.0 ===
2006-04-04  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

2006-04-04  John Ehresman  <jpe@wingware.com>

    reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtktreeview.override:
	Make sure gtk.TreeView.cell_get_size() allows
	the usage of the in argument. Fixes #326357

2006-04-03  Johan Dahlin  <jdahlin@async.com.br>

	* codegen/codegen.py:
	Fit in 80 characters, do not use \

	* codegen/argtypes.py:
	* codegen/codegen.py:
	* codegen/definitions.py:
	* codegen/defsconvert.py:
	* codegen/defsparser.py:
	* codegen/docextract.py:
	* codegen/docextract_to_xml.py:
	* codegen/docgen.py:
	* codegen/h2def.py:
	* codegen/mkskel.py:
	* codegen/override.py:
	* codegen/reversewrapper.py:
	* examples/glade/autoconnect.py:
	* examples/gobject/editable-interface.py:
	* examples/gobject/signal.py:
	* examples/gtk/bin.py:
	* examples/gtk/filechooser.py:
	* examples/gtk/scrollable.py:
	* examples/gtk/sizegroup.py:
	* examples/gtk/uimanager.py:
	* examples/ide/edit.py:
	* examples/ide/gtkdb.py:
	* examples/ide/gtkprof.py:
	* examples/pango/pangocairo-simple.py:
	* examples/pango/utf8-demo.py:
	* examples/pygtk-demo/demos/changedisplay.py:
	* examples/pygtk-demo/demos/dnd.py:
	* examples/pygtk-demo/demos/dndpixmap.py:
	* examples/pygtk-demo/demos/entry_completion.py:
	* examples/pygtk-demo/demos/expander.py:
	* examples/pygtk-demo/demos/hypertext.py:
	* examples/pygtk-demo/demos/list_store.py:
	* examples/pygtk-demo/demos/textview.py:
	* examples/pygtk-demo/demos/tree_store.py:
	* examples/pygtk-demo/demos/treemodel.py:
	* examples/simple/dnd.py:
	* examples/simple/dndpixmap.py:
	* examples/simple/hello.py:
	* examples/simple/scribble.py:
	* examples/simple/simple.py:
	* examples/simple/tooltip.py:
	* gtk/__init__.py:
	* gtk/compat.py:
	* gtk/keysyms.py:
	* ltihooks.py:
	* setup.py:
	* tests/common.py:
	* tests/runtests.py:
	* tests/test_actiongroup.py: