@@ -1,3 +1,12 @@
+2006-04-05  Johan Dahlin  <jdahlin@async.com.br>
+
+	* gtk/gtktreeview.override
+	(_wrap_gtk_tree_sortable_set_default_sort_func): Allow callback 
+	to be set to None, found by Patrick O'Brien
+
+	* tests/test_liststore.py (ListStoreTest.testSetDefaultSortFunc): 
+	Add test
+
 2006-04-04  Johan Dahlin  <jdahlin@async.com.br>
 
 	* configure.in: Post release version bump
